tests/snapshots/codegen_snapshot_tests__issue380_len_comparison.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

#![allow(unused_imports, dead_code, unused_variables)]

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use incan_stdlib::prelude::*;
use incan_derive::{FieldInfo, IncanClass};
pub fn small(xs: Vec<i64>) -> bool {
    return ::std::convert::identity(xs.len() as i64) < 2;
}
#[derive(Clone, Debug, PartialEq)]
pub enum ExprKind {
    Column,
    Add,
}
impl ExprKind {
    pub fn message(&self) -> String {
        match self {
            Self::Column => "Column".to_string(),
            Self::Add => "Add".to_string(),
        }
    }
}
#[derive(Clone, Debug, FieldInfo, IncanClass)]
pub struct Expr {
    pub kind: ExprKind,
    pub column_name: String,
    pub arguments: Vec<Expr>,
}
#[allow(non_snake_case, clippy::too_many_arguments)]
pub fn Expr(kind: ExprKind, column_name: String, arguments: Vec<Expr>) -> Expr {
    Expr {
        kind,
        column_name,
        arguments,
    }
}
impl Expr {
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 3] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("kind"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("kind"),
                type_name: incan_stdlib::frozen::FrozenStr::new("ExprKind"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("column_name"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("column_name"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("arguments"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("arguments"),
                type_name: incan_stdlib::frozen::FrozenStr::new("list[Expr]"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub fn lower(expr: Expr) -> i64 {
    if expr.kind == ExprKind::Column {
        return 0;
    }
    if ::std::convert::identity(expr.arguments.len() as i64) < 2 {
        return -1;
    }
    return 1;
}
