tests/snapshots/codegen_snapshot_tests__issue602_owned_iterator_source_hotpaths.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn double(x: i64) -> i64 {
    return x * 2;
}
fn collect_last_use(xs: Vec<i64>) -> Vec<i64> {
    return {
        let mut __incan_iter = crate::__incan_std::derives::collection::MapIterator {
            source: (crate::__incan_std::derives::collection::ListIterator {
                items: (xs),
                index: 0i64,
            }),
            f: double,
        };
        let mut __incan_items = Vec::new();
        loop {
            match crate::__incan_std::derives::collection::Iterator::__next__(
                &mut __incan_iter,
            ) {
                Some(__incan_item) => __incan_items.push(__incan_item),
                None => break __incan_items,
            }
        }
    };
}
fn generator_last_use(xs: Vec<i64>) -> incan_stdlib::iter::Generator<i64> {
    return incan_stdlib::iter::Generator::new(
        ((xs).clone().into_iter())
            .flat_map(move |x| {
                incan_stdlib::iter::Generator::new(
                    if x > 0 {
                        incan_stdlib::iter::Generator::new(std::iter::once(x))
                    } else {
                        incan_stdlib::iter::Generator::new(std::iter::empty())
                    },
                )
            }),
    );
}
fn generator_one_shot() -> incan_stdlib::iter::Generator<i64> {
    return incan_stdlib::iter::Generator::new(
        ((vec![1, 2, 3]).into_iter())
            .flat_map(move |x| {
                incan_stdlib::iter::Generator::new(
                    if x > 0 {
                        incan_stdlib::iter::Generator::new(std::iter::once(x))
                    } else {
                        incan_stdlib::iter::Generator::new(std::iter::empty())
                    },
                )
            }),
    );
}
fn collect_reused(values: Vec<i64>) -> i64 {
    let total = {
        let mut __incan_iterator_sum = crate::__incan_std::derives::collection::ListIterator {
            items: (values).clone(),
            index: 0i64,
        };
        crate::__incan_std::derives::collection::Iterator::sum(&mut __incan_iterator_sum)
    };
    let first = *incan_stdlib::collections::list_get(&values, (0) as i64);
    return total + first;
}
fn generator_reused(values: Vec<i64>) -> i64 {
    let generated = incan_stdlib::iter::Generator::new(
            ((values).clone().into_iter())
                .flat_map(move |x| {
                    incan_stdlib::iter::Generator::new(
                        if x > 0 {
                            incan_stdlib::iter::Generator::new(std::iter::once(x))
                        } else {
                            incan_stdlib::iter::Generator::new(std::iter::empty())
                        },
                    )
                }),
        )
        .collect();
    let first = *incan_stdlib::collections::list_get(&values, (0) as i64);
    return ::std::convert::identity(generated.len() as i64) + first;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let collected = collect_last_use(vec![1, 2, 3]);
    let generated = generator_last_use(vec![1, 2, 3]).collect();
    let generated_direct = generator_one_shot().collect();
    let reused_iter = collect_reused(vec![1, 2, 3]);
    let reused_gen = generator_reused(vec![1, 2, 3]);
    let _ = println!(
        "{}", * incan_stdlib::collections::list_get(& collected, (0) as i64)
    );
    let _ = println!(
        "{}", * incan_stdlib::collections::list_get(& generated, (0) as i64)
    );
    let _ = println!(
        "{}", * incan_stdlib::collections::list_get(& generated_direct, (0) as i64)
    );
    let _ = println!("{}", reused_iter);
    let _ = println!("{}", reused_gen);
}
